--- a/bng.html
+++ b/bng.html
@@ -15,5 +15,7 @@
     <p>bng bng bng bng bng bng bng bng bng bng bng</p>
     <p>Talking from second branch</p>
     <p>line added in swcond branch</p>
+    <p>merge conflict bojhar jonno abr change korlam
+    </p>
 </body>
 </html>
